--- a/config.env
+++ b/config.env
@@ -14,7 +14,7 @@ BOT_IMAGE=""
 STARTING_BOT_MESSAGE='yes'
 
 #═══════[ PRESENCE & AUTOMATION ]═══════✧#
-PRESENCE=''
+PRESENCE='2'
 AUTO_READ="no"
 AUTO_READ_STATUS="yes"
 AUTO_DOWNLOAD_STATUS="no"
